--- a/arnn_code/AutoRegressiveNN.ipynb
+++ b/arnn_code/AutoRegressiveNN.ipynb
@@ -5,7 +5,7 @@
    "id": "7d2cc488",
    "metadata": {},
    "source": [
-    "#### Run notebook in sequential order , dont press run all , instructions will be provided below "
+    "##### execution instructions proved through out notebook "
    ]
   },
   {
