--- a/arnn_code/AutoRegressiveNN.ipynb
+++ b/arnn_code/AutoRegressiveNN.ipynb
@@ -5,7 +5,9 @@
    "id": "7d2cc488",
    "metadata": {},
    "source": [
-    "##### execution instructions proved through out notebook "
+    "## Predicting Next Day Fan Engagement",
+    "\n",
+    "- execution instructions provided through out notebook \n"
    ]
   },
   {
